# oxideav-flac

./: CHANGELOG.md  Cargo.toml  README.md
src/: bitreader.rs  bits_ext.rs  codec.rs  container.rs  decoder.rs  encoder.rs  frame.rs  lib.rs  md5.rs  metadata.rs  subframe.rs
tests/: docs_corpus.rs  roundtrip.rs  seek.rs  tag_parse.rs
