[package]
name = "oxideav-flac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust FLAC: native container + codec id (decoder forthcoming)"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "audio", "flac", "lossless", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-id3 = { workspace = true }
