[package]
name = "oxideav-flac"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-flac"
authors = ["Mark Karpeles"]
description = "Pure-Rust FLAC lossless audio codec and native container: decoder, encoder, demuxer, muxer"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-flac"
keywords = ["multimedia", "audio", "flac", "lossless", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
oxideav-id3 = "0.0"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
